fixed navbar font and logo spacing

--- a/src/app/shared/app-logo/app-logo.component.scss
+++ b/src/app/shared/app-logo/app-logo.component.scss
@@ -23,7 +23,8 @@
     text-align: center;
     margin-top: 25px;
     font-size: 42px;
-    color: #ffa226,
+    color: #ffa226;
+    font-family: 'Montserrat';
 }
 
 .example-fill-remaining-space {
